--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mohayonao/perlin-noise": "^0.2.0",
+    "keyboard-key": "^1.0.2",
     "node-dir": "^0.1.17"
   }
 }
