--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@mohayonao/perlin-noise": "^0.2.0",
     "keyboard-key": "^1.0.2",
-    "node-dir": "^0.1.17"
+    "node-dir": "^0.1.17",
+    "pixi.js": "^4.6.2"
   }
 }
