--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^1.8.4",
-    "eslint-config-google": "^0.9.1"
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.11.1"
   },
   "dependencies": {
     "@mohayonao/perlin-noise": "^0.2.0",
