--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^1.8.4",
+    "eslint": "^5.5.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-react": "^7.11.1"
   },
